// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/Order/Common/AuditResultFilterContainer render snap when auditLevel is error 1`] = `
<body>
  <div>
    <div
      class=" css-1x9vax"
    >
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-filter-options"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <div
            class="css-1bvs5o7"
          >
            <span
              class="text"
            >
              a
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="css-1bvs5o7"
          >
            <span
              class="text"
            >
              b
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-info"
      >
        <div
          class="ant-space-item"
          style="margin-right: 20px;"
        >
          <div
            class="audit-result-info-item"
          >
            -
            <span
              class="audit-result-info-item-text"
            >
              审核通过率
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 20px;"
        >
          <div
            class="audit-result-info-item"
          >
            -
            <span
              class="audit-result-info-item-text"
            >
              审核结果评分
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/Common/AuditResultFilterContainer render snap when auditLevel is normal 1`] = `
<body>
  <div>
    <div
      class=" css-1x9vax"
    >
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-filter-options"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <div
            class="css-1bvs5o7"
          >
            <span
              class="text"
            >
              a
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="css-1bvs5o7"
          >
            <span
              class="text"
            >
              b
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-info"
      >
        <div
          class="ant-space-item"
          style="margin-right: 20px;"
        >
          <div
            class="audit-result-info-item"
          >
            -
            <span
              class="audit-result-info-item-text"
            >
              审核通过率
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 20px;"
        >
          <div
            class="audit-result-info-item"
          >
            -
            <span
              class="audit-result-info-item-text"
            >
              审核结果评分
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/Common/AuditResultFilterContainer render snap when auditLevel is notice 1`] = `
<body>
  <div>
    <div
      class=" css-1x9vax"
    >
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-filter-options"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <div
            class="css-1bvs5o7"
          >
            <span
              class="text"
            >
              a
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="css-1bvs5o7"
          >
            <span
              class="text"
            >
              b
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-info"
      >
        <div
          class="ant-space-item"
          style="margin-right: 20px;"
        >
          <div
            class="audit-result-info-item"
          >
            -
            <span
              class="audit-result-info-item-text"
            >
              审核通过率
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 20px;"
        >
          <div
            class="audit-result-info-item"
          >
            -
            <span
              class="audit-result-info-item-text"
            >
              审核结果评分
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/Common/AuditResultFilterContainer render snap when auditLevel is warn 1`] = `
<body>
  <div>
    <div
      class=" css-1x9vax"
    >
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-filter-options"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <div
            class="css-1bvs5o7"
          >
            <span
              class="text"
            >
              a
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="css-1bvs5o7"
          >
            <span
              class="text"
            >
              b
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-info"
      >
        <div
          class="ant-space-item"
          style="margin-right: 20px;"
        >
          <div
            class="audit-result-info-item"
          >
            -
            <span
              class="audit-result-info-item-text"
            >
              审核通过率
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 20px;"
        >
          <div
            class="audit-result-info-item"
          >
            -
            <span
              class="audit-result-info-item-text"
            >
              审核结果评分
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/Common/AuditResultFilterContainer render snap when border is false 1`] = `
<body>
  <div>
    <div
      class="audit-result-filter-container-borderless css-1x9vax"
    >
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-filter-options"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <div
            class="css-1bvs5o7"
          >
            <span
              class="text"
            >
              a
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="css-1bvs5o7"
          >
            <span
              class="text"
            >
              b
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-info"
      >
        <div
          class="ant-space-item"
          style="margin-right: 20px;"
        >
          <div
            class="audit-result-info-item"
          >
            -
            <span
              class="audit-result-info-item-text"
            >
              审核通过率
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 20px;"
        >
          <div
            class="audit-result-info-item"
          >
            -
            <span
              class="audit-result-info-item-text"
            >
              审核结果评分
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/Common/AuditResultFilterContainer render snap when no optional parameters 1`] = `
<body>
  <div>
    <div
      class=" css-1x9vax"
    >
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-filter-options"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <div
            class="css-1bvs5o7"
          >
            <span
              class="text"
            >
              a
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="css-1bvs5o7"
          >
            <span
              class="text"
            >
              b
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-info"
      >
        <div
          class="ant-space-item"
          style="margin-right: 20px;"
        >
          <div
            class="audit-result-info-item"
          >
            -
            <span
              class="audit-result-info-item-text"
            >
              审核通过率
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 20px;"
        >
          <div
            class="audit-result-info-item"
          >
            -
            <span
              class="audit-result-info-item-text"
            >
              审核结果评分
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/Common/AuditResultFilterContainer render snap when other params 1`] = `
<body>
  <div>
    <div
      class=" css-1x9vax"
    >
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-filter-options"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <div
            class="css-1bvs5o7"
          >
            <span
              class="text"
            >
              a
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="css-1bvs5o7"
          >
            <span
              class="text"
            >
              b
            </span>
          </div>
        </div>
      </div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-info"
      >
        <div
          class="ant-space-item"
          style="margin-right: 20px;"
        >
          <div
            class="audit-result-info-item"
          >
            <span
              class="audit-result-info-item-value audit-level-normal"
            >
              100
              %
            </span>
            <span
              class="audit-result-info-item-text"
            >
              审核通过率
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 20px;"
        >
          <div
            class="audit-result-info-item"
          >
            <span
              class="audit-result-info-item-value audit-level-normal"
            >
              9
            </span>
            <span
              class="audit-result-info-item-text"
            >
              审核结果评分
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="audit-result-info-item"
          >
            <span
              class="audit-result-info-item-schema-value"
            >
              schema name
            </span>
            <span
              class="audit-result-info-item-text"
            >
              Schema
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
